# soter-v2

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTE.md  README.md  \  adapted.csv  core.json  example_output.txt  flake.nix  icfa_test.sh  shell.nix
benchmarks/: concdb.erl  dynlockb.erl  finite_leader.erl  firewall.erl  huch.prop  lockb.erl  match.erl  match2.erl  reslockbeh.erl  scalaris.erl  sieve.erl  sieve2.erl  stutter.erl  test_core.erl  thesis2.erl  ufirewall.erl  unsafe_send.erl  workers.erl
erlang/: ecorej.erl  rebar.config
erlang-code/: core_parse.hrl  fib.erl  fib.json  to_core.erl
erlang/src/: ecorej.erl
examples/: example.core  example.erl  example_2.erl
ica4erl/: rec_id.erl
ica_examples/: report.erl
icfa_examples/: church.erl  concurr.erl  fumble_smart.erl  id.erl  id_long_literal.erl  id_tuple.erl  rec_id.erl  rec_id_ext.erl  rec_id_tuple.erl  report.erl
src/: abstract_state_space.rs  ast.rs  ast_helper.rs  concrete_state_space.rs  db.rs  erlang.rs  lib.rs  main.rs  scripts.rs  state_space.rs
src/abstraction/: mod.rs
src/address_builder/: allocation_schemes.rs  mod.rs
src/analyzer/: abs_push_let.rs  allocation_schemes.rs  dependency_checker.rs  match_helper.rs  mod.rs  state.rs
src/archive/: scripts.rs
src/ast/: alias.rs  (+38 more)
test/: bigring.erl  call.erl  fib.erl  finite_leader2.erl  function.erl  grammars.hrl  howait.erl  huch.erl  luke.erl  match2_eeehhh.erl  module.erl  parikh.erl  pipe.erl  race.erl  ring.erl  safe_send.erl  simple_leader.erl  soter.erl  test.erl  thesis.erl  try_catch.erl
tests/: benchmarks.rs  soundness.rs
(+99 files in other folders)
